--- a/modules/openapi-generator/src/main/resources/kotlin-spring/model.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-spring/model.mustache
@@ -3,6 +3,7 @@ package {{package}}
 import java.util.Objects
 {{#imports}}import {{import}}
 {{/imports}}
+import com.fasterxml.jackson.annotation.JsonCreator
 {{#useBeanValidation}}
 import javax.validation.constraints.DecimalMax
 import javax.validation.constraints.DecimalMin
