--- a/modules/openapi-generator/src/main/resources/kotlin-spring/api.mustache
+++ b/modules/openapi-generator/src/main/resources/kotlin-spring/api.mustache
@@ -1,5 +1,4 @@
 package {{package}}
-
 {{#imports}}import {{import}}
 {{/imports}}
 {{#swaggerAnnotations}}
@@ -14,7 +13,6 @@ import io.swagger.annotations.AuthorizationScope
 import org.springframework.http.HttpStatus
 import org.springframework.http.MediaType
 import org.springframework.http.ResponseEntity
-
 import org.springframework.web.bind.annotation.RequestBody
 import org.springframework.web.bind.annotation.RequestPart
 import org.springframework.web.bind.annotation.RequestParam
@@ -28,7 +26,6 @@ import org.springframework.validation.annotation.Validated
 {{/useBeanValidation}}
 import org.springframework.web.context.request.NativeWebRequest
 import org.springframework.beans.factory.annotation.Autowired
-
 {{#useBeanValidation}}
 import javax.validation.Valid
 import javax.validation.constraints.DecimalMax
@@ -39,13 +36,12 @@ import javax.validation.constraints.NotNull
 import javax.validation.constraints.Pattern
 import javax.validation.constraints.Size
 {{/useBeanValidation}}
-
 {{#reactive}}
 import kotlinx.coroutines.flow.Flow;
 {{/reactive}}
 import kotlin.collections.List
 import kotlin.collections.Map
-
+/** 実装クラスに持っていく
 @RestController
 {{#useBeanValidation}}
 @Validated
@@ -57,9 +53,10 @@ import kotlin.collections.Map
 @RequestMapping("\${api.base-path:<%contextPath%>}")
 <%={{ }}=%>
 {{#operations}}
-class {{classname}}Controller({{#serviceInterface}}@Autowired(required = true) val service: {{classname}}Service{{/serviceInterface}}) {
+*/
+abstract class {{classname}}BaseController({{#serviceInterface}}val service: {{classname}}Service{{/serviceInterface}}) {
 {{#operation}}
-
+    /** 実装クラスに持っていく
     {{#swaggerAnnotations}}
     @ApiOperation(
         value = "{{{summary}}}",
@@ -77,9 +74,9 @@ class {{classname}}Controller({{#serviceInterface}}@Autowired(required = true) v
         produces = [{{#produces}}"{{{mediaType}}}"{{#hasMore}}, {{/hasMore}}{{/produces}}], {{/hasProduces}}{{#hasConsumes}}
         consumes = [{{#consumes}}"{{{mediaType}}}"{{#hasMore}}, {{/hasMore}}{{/consumes}}],{{/hasConsumes}}{{/singleContentTypes}}
         method = [RequestMethod.{{httpMethod}}])
-    {{#reactive}}{{^isListContainer}}suspend {{/isListContainer}}{{/reactive}}fun {{operationId}}({{#allParams}}{{>queryParams}}{{>pathParams}}{{>headerParams}}{{>bodyParams}}{{>formParams}}{{#hasMore}},{{/hasMore}}{{/allParams}}): ResponseEntity<{{>returnTypes}}> {
-        return {{>returnValue}}
-    }
+    @ResponseStatus(HttpStatus.OK)
+    */
+    abstract {{#reactive}}{{^isListContainer}}suspend {{/isListContainer}}{{/reactive}}fun {{operationId}}({{#allParams}}{{>queryParams}}{{>pathParams}}{{>headerParams}}{{>bodyParams}}{{>formParams}}{{#hasMore}},{{/hasMore}}{{/allParams}}): {{>returnTypes}}
 {{/operation}}
 }
 {{/operations}}
